--- a/input/01.html
+++ b/input/01.html
@@ -1,9 +1,9 @@
-<html>
+<html name="viewport">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Test 01</title>
+    <title>Test 0</title>
   </head>
   <body>
     <h1>Hello world!</h1>
